Integrated chat by searching people in 'users' collection

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,20 @@ html::-webkit-scrollbar{
 html{
     scrollbar-width:none
 }
+
+/*chat css
+
+.home{
+    background-color: #a7bcff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .container{
+        border: 1px  solid white;
+        border-radius: 10px;
+        width: 65%;
+        height: 80%;
+    }
+}
+*/
