--- a/src/index.css
+++ b/src/index.css
@@ -22,19 +22,37 @@ html{
     scrollbar-width:none
 }
 
-/*chat css
 
-.home{
-    background-color: #a7bcff;
-    height: 100vh;
+.main-container {
     display: flex;
+    height: 100vh;
     align-items: center;
-    justify-content: center;
-    .container{
-        border: 1px  solid white;
-        border-radius: 10px;
-        width: 65%;
-        height: 80%;
-    }
-}
-*/
+    background: #111;
+  }
+  
+  .main-container .image-container {
+    /* flex: 1; */
+    height: 100%;
+  
+    position: fixed;
+    width: 100%;
+  }
+  
+  .main-container h1 {
+    flex: 1;
+    text-align: center;
+    color: #fff;
+    font-family: "Raleway", sans-serif;
+    text-transform: uppercase;
+    font-size: 60px;
+    font-weight: 800;
+    letter-spacing: 10px;
+  
+    z-index: 100;
+    text-shadow: 2px 16px 16px rgba(0, 0, 0, 0.3);
+    pointer-events: none;
+  }
+  #panorama{
+    width: 100%;
+    height: 100vh;
+  }
